<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.lesson.myahut.activity.PreScoreActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="3dp"
        android:paddingLeft="3dp"
        android:text="请输入学号和身份证号，并选择学年和学期" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/marginTop"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            android:padding="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/score_uid"
                android:textSize="@dimen/prescore_textsize" />

            <EditText
                android:id="@+id/score_uid"
                android:layout_width="@dimen/logintext_width"
                android:layout_height="wrap_content"
                android:hint="@string/score_uid_hint"
                android:inputType="number"
                android:singleLine="true"></EditText>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            android:padding="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/score_tid"
                android:textSize="@dimen/prescore_textsize" />

            <EditText
                android:id="@+id/score_tid"
                android:layout_width="@dimen/logintext_width"
                android:layout_height="wrap_content"
                android:hint="@string/score_tid_hint"
                android:inputType="text"></EditText>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            android:padding="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/score_xn"
                android:textSize="@dimen/prescore_textsize" />

            <Spinner
                android:id="@+id/score_xn"
                android:layout_width="@dimen/logintext_width"
                android:layout_height="match_parent"></Spinner>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            android:padding="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/score_xq"
                android:textSize="@dimen/prescore_textsize" />

            <Spinner
                android:id="@+id/score_xq"
                android:layout_width="@dimen/logintext_width"
                android:layout_height="match_parent"></Spinner>

        </LinearLayout>

        <Button
            android:id="@+id/scoreBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="查询"
            android:textSize="18sp" />
    </LinearLayout>

</RelativeLayout>
